--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<title>D3Times</title>
 	<link rel="stylesheet" href="assets/css/style.css">
 	<!-- Latest compiled and minified CSS & JS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.7.3/d3.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-12 col-md-offset-0">
 				<h1>D3Times</h1>
@@ -21,21 +21,39 @@
 			<div class="col-xs-12  col-md-9 col-md-offset-0">
 				<div class="iframeContainer">
 					<!-- Students: Add a responsive iframe here that includes the d3.html file -->
-				</div>
+					<div class="embed-responsive embed-responsive-16by9 mb-4">
+					<iframe id="s-chart" class="embed-responsive-item" src="./d3.html"></iframe>
+					</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-12  col-md-9 col-md-offset-0">
 				<div class="article">
 					<!-- Students: Replace with your analysis of the data -->
+					<h4>~~~ Average Mean Income </h4>
+					<ul>
+						<li> Average Mean Income has stronger negative correlation with having diabetes and heart-attack. </li>
+						<li> Average Mean Income has stronger positive correlation with dental-visit.  </li>
+					</ul>
+					<h4>~~~ Age 60 Years and Older </h4>
+					<ul>
+						<li> Age 60 Years and Older has Medium positive correlation with having heart-attack, and has weak positive correlation with having diabetes.</li>
+						<li> Age 60 Years and Older has weak negative correlation or no correlation with dental-visit. </li>
+					</ul>
+					<h4>~~~ Have at least Bachelor Degree </h4>
+					<ul>
+						<li> People who at least have bachelor Degree has week negative correlation with having heart-attack and diabetes.</li>
+						<li> People who at least have bachelor Degree has medium correlation with dental-visit. </li>
+					</ul>
 				</div>
 			</div>
 		</div>
 	</div>
 
 		<!-- Footer-->
-	<div id="footer">
-		<p><!-- Insert your Copyright Info here --></p>
+	<div id="footer" class="col-xs-12  col-md-9 col-md-offset-0">
+		<!-- Added In Copy Right-->
+		<p>© 2018 Copyright: Nana's Homework for USC Coding Bootcamp</p>
 	</div>
 
 </body>
